--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,13 +3,21 @@
       package="net.zllr.precisepitch"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="PitchDisplay"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+
+  <uses-sdk android:minSdkVersion="9"
+	    android:targetSdkVersion="16" />
+
+  <application android:label="@string/app_name"
+	       android:icon="@drawable/ic_launcher">
+    <activity android:name="net.zllr.precisepitch.PitchDisplay"
+	      android:label="@string/app_name">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
+
+  <!-- we need to access the microphone -->
+  <uses-permission android:name="android.permission.RECORD_AUDIO" />
 </manifest>
