--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	    android:targetSdkVersion="16" />
 
   <application android:label="@string/app_name"
-	       android:icon="@drawable/ic_launcher">
+	       android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.NoTitleBar">
     <activity android:name="net.zllr.precisepitch.PitchDisplay"
 	      android:label="@string/app_name">
       <intent-filter>
