--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
   <application android:label="@string/app_name"
 	       android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.NoTitleBar">
-    <activity android:name="net.zllr.precisepitch.PitchDisplay"
+    <activity android:name=".PitchDisplay"
 	      android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
