--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,8 @@
 	    android:targetSdkVersion="16" />
 
   <application android:label="@string/app_name"
-	       android:icon="@drawable/app_icon" android:theme="@android:style/Theme.NoTitleBar">
+	       android:icon="@drawable/ic_launcher_pp"
+	       android:theme="@android:style/Theme.NoTitleBar">
     <activity android:name=".PitchDisplay"
 	      android:label="@string/app_name">
       <intent-filter>
