--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,23 +12,27 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
+        android:allowBackup="True"
         android:icon="@drawable/ic_launcher_pp"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar"
-        android:allowBackup="True" >
-        
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name="net.zllr.precisepitch.PrecisePitchHome"
             android:label="@string/title_activity_precise_pitch_home" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="net.zllr.precisepitch.PitchDisplay" android:label="@string/app_name">
+        <activity
+            android:name="net.zllr.precisepitch.PitchDisplay"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="net.zllr.precisepitch.FingerboardHeatMap"
+            android:label="@string/title_activity_fingerboard_heat_map" >
         </activity>
     </application>
-
-
 
 </manifest>
