--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,6 +37,10 @@
                 android:name="net.zllr.precisepitch.PracticeActivity"
                 android:label="@string/practice_note_sequences" >
         </activity>
+        <activity
+                android:name="net.zllr.precisepitch.PitchCompetitionActivity"
+                android:label="@string/pitch_competition" >
+        </activity>
     </application>
 
 </manifest>
