o Show game result. Fix to actually collect histogram info :)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,6 +49,7 @@
             android:name="net.zllr.precisepitch.CarRaceAnimation"
             android:label="@string/title_activity_car_race_animation" >
         </activity>
+        <activity android:name=".GameResultActivity"/>
     </application>
 
 </manifest>
