o Remove unused options in main menu. o Make practice view always landscape. o Make debug pitch generator to be more erratic.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,8 @@
         </activity>
         <activity
             android:name="net.zllr.precisepitch.PracticeActivity"
-            android:label="@string/practice_note_sequences" >
+            android:label="@string/practice_note_sequences"
+	    android:screenOrientation="landscape">
         </activity>
         <activity
             android:name="net.zllr.precisepitch.GameSetupActivity"
